# guitar-riff

./: Cargo.toml  LICENSE  README.md
guitar-riff/: Cargo.toml
guitar-riff/src/: chunk.rs  identifiers.rs  lib.rs  prelude.rs  riff.rs
riff-info/: Cargo.toml
riff-info/src/: main.rs
